# traffic-simulator

./: README.md  pyproject.toml
examples/: example.py  parts_example.py
tests/: test.py
traffic_sim/: __init__.py  animation.py  constants.py  geometry.py  linked_road.py  parts_road.py  physics.py  road.py
traffic_simulator/: __init__.py  animation.py  cars.py  constants.py  geometry.py  physics.py  track.py
