[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-sim"
version = "0.1.0"
description = "A traffic simulation package modeling car kinematics, sector speed limits, and congestion metrics on circular tracks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Matija Lakner" }
]
keywords = ["traffic", "simulation", "kinematics", "matplotlib", "physics", "cellular-automata", "traffic-flow"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "numpy>=1.22.0",
    "matplotlib>=3.5.0",
    "pandas>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/matijalakner/drive_sim"
Repository = "https://github.com/matijalakner/drive_sim"

[tool.setuptools.packages.find]
where = ["."]
include = ["traffic_sim*"]
